# ocm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_cn.md  build_and_setup_tf.sh  build_ocm.sh
OCM/: CMakeLists.txt  ocm_nodes_checker.cc
OCM/onnx/: ocm_onnx_checker.cc  ocm_onnx_checker.h  ocm_onnx_ops_list.h
OCM/tensorflow/: ocm_tf_checker.cc  ocm_tf_checker.h  ocm_tf_ops_list.h
OCM/tf/: ocm_tf_checker.cc  ocm_tf_checker.h  ocm_tf_ops_list.h
cmake/: FindTensorFlow.cmake
include/: ocm_logging.h  ocm_nodes_checker.h
test/: ocm_ov_test.cc
test/ci/: Jenkinsfile
test/ci/azure/: ocm.yml
test/python/: README.md  README_cn.md  config.json  generate_ir.py  invalid_tests_list.txt  invalid_tests_list_CPU.txt  invalid_tests_list_GPU.txt  invalid_tests_list_HDDL.txt  invalid_tests_list_MYRIAD.txt  run_inference.py  run_test.sh  run_test_setup.sh  test.sh  test_list.txt  test_model_list.txt
test/python/patch/: disable_eager_execution.patch  tf_test_dump_pb.patch
test/python/scripts/: checkmarx.py  generate_ir.py  parameter_test.py  run_inference.py  run_mc.py  run_ocm.py  tf_rem_unsupported_op_update.patch  tf_test_modify_input.py  tf_test_update.patch  tf_unittest_runner.py
